before fixing contact form

--- a/resume.html
+++ b/resume.html
@@ -36,10 +36,10 @@
                         <a class="nav-link js-scroll-trigger" href="/index.html#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Resume&CV</a>
+                        <a class="nav-link js-scroll-trigger active" href="./resume.html">Resume&CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#resource">Resource</a>
+                        <a class="nav-link js-scroll-trigger" href="./resource.aspx">Resources</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/index.html#contact">Contact</a>
@@ -159,7 +159,7 @@
                     <h3 class="mb-0">Northern Alberta Institute of Technology</h3>
                     <div class="subheading mb-3">Bachelor of Applied Information System Technology</div>
                     <div>Information Systems Major</div>
-                    <p>GPA: 4.0</p>
+                    <!--<p>GPA: 4.0</p>-->
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">September 2018 - April 2020</span>
@@ -215,11 +215,11 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Mobile-First, Responsive Design
+                    Importance of Performance, Server programming
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Cross Browser Testing &amp; Debugging
+                    Cross Browser Testing &amp; Debugging, Unit Testing
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -288,10 +288,10 @@
                     <i class="fa-li fas fa-certificate text-warning"></i>
                     SCJP Certification by Sun
                 </li>
-                <li>
-                    <i class="fa-li fa fa-award text-warning"></i>
-                    Dean's Honor by Northern Alberta Institute of Technology
-                </li>
+                <!--<li>
+        <i class="fa-li fa fa-award text-warning"></i>
+        Dean's Honor by Northern Alberta Institute of Technology
+    </li>-->
                 <li>
                     <i class="fa-li fa fa-award text-warning"></i>
                     2014 Smart SDSers Award by SamsungSDS
