nav url changes

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
                         <a class="nav-link js-scroll-trigger active" href="./resume.html">Resume&CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="./resource.aspx">Resources</a>
+                        <a class="nav-link js-scroll-trigger" href="./Resources.aspx">Resources</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/index.html#contact">Contact</a>
